# src/app/controllers/auth.controller.js
@@ -2,7 +2,6 @@
 
 const BaseController = require('./base.controller');
 const AuthRepository = require('../domain/repositories/auth.repository');
-const config = require('config');
 const JwtUtil = require('../utils/jwtUtil');
 const jwt = require('jsonwebtoken');
 const repository = new AuthRepository();
@@ -24,19 +23,6 @@ class AuthController extends BaseController {
             const token = await repository.accessToken(req.body);
  
             res.send(token);
-
-            /* 
-                Development setup 
-            */
-            // const {LOGIN: loginBody, PASSWORD: passwordBody} = req.body;
-            // const login = await config.get('AUTH').LOGIN;
-            // const password = await config.get('AUTH').PASSWORD;
-            // if(login === loginBody && password === passwordBody){
-            //     const token =await JwtUtil.sign({ login });
-            //     return super.sendSuccess(res, token);
-            // }
-            // res.status(400).send('error');
-
         } catch (err) {
             super.sendError(res, err);
         }
